--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^3.0.0-beta.24",
+    "i18next": "^25.0.1",
     "iconoir-react": "^7.11.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.5.1",
     "react-router-dom": "^7.5.2",
     "styled-components": "^6.1.17",
     "tailwindcss": "^3.4.17"
@@ -22,6 +24,7 @@
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/react-i18next": "^7.8.3",
     "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
