--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-i18next": "^15.5.1",
     "react-router-dom": "^7.5.2",
     "styled-components": "^6.1.17",
+    "swiper": "^11.2.6",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
